examples/shell_err_type/expected.txt
error: shell interpolation must be Str or Int, found bool
  --> input:2:20
  |
2 | let bad = $ echo @{b}
  |                    ^
